# eva-brain-repo

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  eva.runtime.example.json  eva.runtime.json  for-open-ai.md
docs/: agent_pr_summary.md  agent_proposal_apply.md  agent_safety_model.md  agent_task_contract.md  agent_task_task-1778659333-2.md  agent_validation_report.md  agent_workspace_inspector.md  candidate_queue.md  metrics_semantics.md  openai_llm_adapter.md  phase_15x_status.md  phase_16_evolution_core_readiness.md  phase_21_eve_fix.md  phase_22_eve_doctor.md  phase_23_repair_benchmark.md  phase_24x_repair_quality_capability_external_proof.md  production_agent_v1.md  release_candidate_flow.md  runtime_tui.md
src/: benchmark_case_loader.rs  benchmark_metrics.rs  benchmark_report.rs  benchmark_runner.rs  github_tool_contract.rs  github_tool_executor.rs  lib.rs  local_model.rs  main.rs  project_phase_report.rs  repo_patch_report.rs  runtime_cycle.rs  runtime_daemon.rs  tool_executor.rs
tests/: agent_safe_apply_tests.rs  benchmark_pipeline_tests.rs  doctor_command_tests.rs  eve_smoke.rs  evolution_autonomy_gate_tests.rs  evolution_generated_tests.rs  evolution_phase151x_tests.rs  evolution_phase160p_readiness_tests.rs  evolution_phase1_tests.rs  evolution_phase25_tests.rs  evolution_phase37_tests.rs  evolution_phase40a_tests.rs  evolution_phase40b_tests.rs  evolution_phase45r_tests.rs  evolution_phase46r_tests.rs  evolution_phase47_tests.rs  evolution_phase48x_tests.rs  evolution_phase50_tests.rs  evolution_phase51_tests.rs  evolution_phase52x_tests.rs  (+22 more)
(+141 files in other folders)
